--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -292,3 +292,33 @@
 	title = {Nuclear import time and transport efficiency depend on importin $\upbeta$ concentration},
 	journal = {Journal of Cell Biology}
 }
+
+
+@article{ParadiseETAL2007,
+	doi = {10.1016/j.jmb.2006.09.089},
+	url = {https://doi.org/10.1016%2Fj.jmb.2006.09.089},
+	year = 2007,
+	month = {jan},
+	publisher = {Elsevier {BV}},
+	volume = {365},
+	number = {1},
+	pages = {50--65},
+	author = {Allison Paradise and Mikhail K. Levin and George Korza and John H. Carson},
+	title = {Significant Proportions of Nuclear Transport Proteins with Reduced Intracellular Mobilities Resolved by Fluorescence Correlation Spectroscopy},
+	journal = {Journal of Molecular Biology}
+}
+
+
+
+@article{KalitaETAL2022,
+	doi = {10.1083/jcb.202108107},
+	url = {https://doi.org/10.1083%2Fjcb.202108107},
+	year = 2022,
+	month = {jan},
+	publisher = {Rockefeller University Press},
+	volume = {221},
+	number = {3},
+	author = {Joanna Kalita and Larisa E. Kapinos and Tiantian Zheng and Chantal Rencurel and Anton Zilman and Roderick Y.H. Lim},
+	title = {Karyopherin enrichment and compensation fortifies the nuclear pore complex against nucleocytoplasmic leakage},
+	journal = {Journal of Cell Biology}
+}
