--- a/tex/main.tex
+++ b/tex/main.tex
@@ -145,6 +145,8 @@ A minimalistic computational model of NCT%
 \thanks{%
 R.~Andreev, L.~Kapinos, and R.~Y.~H.~Lim.
 \today
+\hfill
+\tiny\color{lightgray}\hfill{\DTMnow}
 }}
 
 \date{}
@@ -1457,5 +1459,4 @@ to reproduce those trends.
 
 
 
-\leavevmode\vfill{\tiny\color{lightgray}\hfill{\DTMnow}}
 \end{document}
